syntax = "proto3";
package tau;

message EmptyRequest {}

message EmptyResponse {}
